--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
+<!---İsim-->
 <h1>Semanur Özyılmaz</h1>
 <h2>Hakkımda</h2>
+<!---Tanıtma-->
 <p>Merhaba ben Semanur. Bilgisayar mühendisliği bölümünden mezun oldum. Şu anda da veri bilimi,
     makine öğrenmesi, Flutter ve front-end geliştirme üzerine çalışıyorum. Ayrıca fotoğraf çekmeyi,
     resim çizmeyi ve kitap okumayı çok seviyorum.
